changed stylesheet link

--- a/users.html
+++ b/users.html
@@ -18,15 +18,15 @@
 
     <meta name="description" content="Place to contribute if you are a first timer"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#157878">
+    <meta name="theme-color" content="#157878">     
     <!-- Material Design Lite -->
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.blue-orange.min.css">
     <!-- Material Design icon font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="/awesome-first-timers/assets/css/style.css?v=56d8feb66ef50b935716ac0456fa61039bc6c708">
-    <link rel="stylesheet" href="/awesome-first-timers/_layouts/style.css">
+    <!--<link rel="stylesheet" href="/awesome-first-timers/assets/css/style.css?v=56d8feb66ef50b935716ac0456fa61039bc6c708">-->
+    <link rel="stylesheet" href="/ericduns.github.io/style.css">
   </head>
   <body>
     <section class="page-header">
