--- a/users.html
+++ b/users.html
@@ -2,7 +2,8 @@
 <html lang="en-US">
   <head>
     <meta charset="UTF-8">
-     
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+        
     <!-- Material Design Lite -->
     <script src="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.min.js"></script>
     <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.2/material.blue-orange.min.css">
