--- a/index.html
+++ b/index.html
@@ -144,7 +144,11 @@
 
   </section>
     <footer>Designed &amp; built by <a href="https://orioncomputing.net/">Orion Computing</a>. &copy; 2017 TEDxWLUBrantford. Contact us at <b>info@tedxwlubrantford.com</b>.</footer>
-    <a href="#header" class="scrolltotop">?</a>
+    <a href="#header" class="scrolltotop">
+       <i class="fa fa-chevron-up" aria-hidden="true">
+         ::before
+       </i>
+    </a>
   </section>
   
 </body>
