--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@
     <div class="large image show wow fadeIn" style="visibility:visible; animation-name: fadeIn;">
       <img src="https://cdn.discordapp.com/attachments/356482152784986112/357000059436531712/rsz_1one_dropthousands_of_ripples.png" alt="TEDx WLU Brantford">
       <a href="#about" class="down">
-        <i class="fa fa-chevron-down" aria-hidden="true">
-          ::before
-        </i>
+        <i class="fa fa-chevron-down" aria-hidden="true"></i>
       </a>
     </div>
   </section>  
@@ -145,9 +143,7 @@
   </section>
     <footer>Designed &amp; built by <a href="https://orioncomputing.net/">Orion Computing</a>. &copy; 2017 TEDxWLUBrantford. Contact us at <b>info@tedxwlubrantford.com</b>.</footer>
     <a href="#header" class="scrolltotop">
-       <i class="fa fa-chevron-up" aria-hidden="true">
-         ::before
-       </i>
+       <i class="fa fa-chevron-up" aria-hidden="true"></i>
     </a>
   </section>
   
